src/styles/style.scss
@charset "utf-8";

// Set your brand colors
$p-orange: #ee7f2d;
$p-orange-hover: #994400;
$p-black: #221e20;
$p-gray-5: #7f7f83;
$p-gray-10: #bdbec1;

// Update Bulma's global variables
$primary: $p-orange;
$link: $p-orange;
$link-hover: $p-orange-hover;
$black: $p-black;
$navbar-height: 4rem;

// Custom navbar
.navbar {
    border-bottom: 4px solid $p-orange;
}
.navbar-item.is-active {
    color: $p-orange !important;
}

// Custom footer
.footer {
    border-top: 4px solid $p-orange;
}

// Enable sticky footer
.Site {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}
.Site-content {
    flex: 1;
}

// Custom content tables
.content table {
    // display: block;
    // width: 100%;
    // width: -webkit-max-content;
    // width: -moz-max-content;
    // width: max-content;
    // max-width: 100%;
    // overflow: auto;
    // white-space: nowrap;
    @extend .table.is-striped;
    @extend .table.is-hoverable;
}

// Code formatting triage
.content {
    .number,
    .tag {
        align-items: inherit;
        background-color: inherit;
        border-radius: inherit;
        color: inherit;
        display: contents;
        font-size: inherit;
        height: inherit;
        justify-content: inherit;
        line-height: inherit;
        margin-right: inherit;
        min-width: inherit;
        padding: inherit;
        text-align: inherit;
        vertical-align: inherit;
        white-space: inherit;
    }
}
pre[class*="language-"] {
    padding: 1.5em !important;
}
.highlight-line {
    display: inline-block;
    text-decoration: none;
    color: inherit;
}
.highlight-line:empty:before {
    content: " ";
}
.highlight-line:not(:last-child) {
    min-width: 100%;
}
.highlight-line .highlight-line:not(:last-child) {
    min-width: 0;
}
.highlight-line-isdir {
    color: #b0b0b0;
    background-color: #222;
}
.highlight-line-active {
    background-color: #444;
    background-color: hsla(0, 0%, 27%, 0.8);
}
.highlight-line-add {
    background-color: #45844b;
}
.highlight-line-remove {
    background-color: #902f2f;
}

// direct links and markdown anchors
.direct-link {
    text-decoration: none;
    font-style: normal;
    margin-left: 0.1em;
}
a[href].direct-link,
a[href].direct-link:visited {
    color: transparent;
}
a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
    color: $p-orange;
}

@import "../../node_modules/bulma/bulma.sass";

